--- a/source/localisation/achievement_tooltips_l_english.yml
+++ b/source/localisation/achievement_tooltips_l_english.yml
@@ -38,8 +38,8 @@
  achievement_david_the_builder_tooltip:0 "[Root.GetName]のどの州も、建築枠が埋まる。"
  all_coffee_owned_by_you:0 "アジア、ヨーロッパ、アフリカ、オセアニアにヨーロッパ諸国が領有する§Yコーヒー§!を生産する州がない。"
  chop_chop.tooltip:0 "一代の君主で§Y6人§!の異なる配偶者を持った。"
- anglophile.tooltip:0 "イングランドとイギリスのミッションを全て完了した。"
- achievement_mewar_never_changes_tooltip:0 "メーワールのミッションを全て完了した。"
+ anglophile.tooltip:0 "イングランドとイギリスのミッションを全て達成した。"
+ achievement_mewar_never_changes_tooltip:0 "メーワールのミッションを全て達成した。"
  achievement_the_coin_is_stronger_than_the_sword_tooltip:0 "勅許会社を使ってインドの州を購入する。"
  populists_in_government_tooltip:0 "政府改革の制定によって政体を変更する。"
  achievement_fine_financials_tooltip:0 "レベル§Y3§!以上の交易中心地を§Y8§!つ領有する。"
@@ -47,18 +47,18 @@
  achievement_eat_your_greens_tooltip:0 "絶対主義の時代までに§Yアジア§!の§Y草原§!地形の州を全て自国か従属国が領有している。"
  achievement_emperor_of_hindustan_tooltip:0 "デリーの最大版図を復元する。"
  achievement_the_pheasant_strut_tooltip:0 "ネパールとプロイセンが戦争主導国の戦争において、少なくともプロイセンに§Y100,000§!人の死傷者を出させたうえでプロイセンを破る。"
- completed_spanish_missions:0 "スペインのミッションを全て完了した。"
+ completed_spanish_missions:0 "スペインのミッションを全て達成した。"
  discovered_random_new_world:0 "新世界全域を発見した。"
  captured_a_flagship:0 "敵国の旗艦を拿捕した。"
  expelled_5_different_minorities_tooltip:0 "異なる5つのマイノリティを追放した。"
  spanish_fly_tooltip:0 "イベリア地方に首都のある国家のいずれかが[Root.GetName]の同君下位国となる。"
  spread_revolution_ten_times_tt:0 "革命を10倍に拡大する"
  kingdom_of_god_achievement_tt:0 "神の王国である"
- completed_austrian_missions:0 "オーストリアのミッションを完了する。"
+ completed_austrian_missions:0 "オーストリアのミッションを達成する。"
  mare_nostrum_achievement_tt:0 "地中海および黒海の全沿岸州を領有する。"
  achievement_assemble_instructions_needed_tootlip:0 "神聖ローマ帝国の改革§Y諸侯特権の廃止§!を通過させる。"
  released_in_1444_tooltip:0 "§Y1444§!年に解放されている。"
  achievement_purify_the_temple_tooltip:1 "§Y[118.Owner.GetName]§!に対して§Y異端教会への襲撃§!を使い、§Y[118.GetName]§!教会を襲撃する。"
  has_celebrated_festival_tooltip:0 "祝祭を執り行う。"
  achievement_the_freest_man_in_the_world_tooltip:0 "世界中のどの植民地化された州も§Y奴隷§!を生産していない。"
- achievement_mehmet_ambition_tooltip:0 "Owned by §Y[Root.GetName]§! or its §YCore Eyalet§! subjects."
+ achievement_mehmet_ambition_tooltip:0 "§Y[Root.GetName]§!またはその§Y中核エヤレト§!従属国が領有している。"
