--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1292,7 +1292,7 @@
  desc_kor_factional_upheaval:0 "宋明理学の台頭は、国家に対する派閥の動乱の波を解き放った。"
  kor_factional_unity:0 "派閥の統一"
  desc_kor_factional_unity:0 "国を引き裂く派閥の争いは終わり、朝鮮統一の新時代が幕を開けた。"
- flavor_kor.10.tt2:0 "この補正はミッション§Y派閥抗争からの解放§!が完了した時にのみ削除されます。\n"
+ flavor_kor.10.tt2:0 "この補正はミッション§Y派閥抗争からの解放§!が達成した時にのみ削除されます。\n"
  no_country_is_EoC:0 "中華皇帝である国家はありません。"
  war_of_the_roses_end_tooltip_pretender_still_lives:1 "僭称者は死んだ"
  war_of_the_roses.200.name:0 "僭称者の逃亡"
@@ -1808,7 +1808,7 @@
  incidents_bur_join_empire.4.t:0 "[Emperor.Monarch.GetTitle]の拒否"
  incidents_bur_join_empire.4.desc:0 "[Emperor.Monarch.GetTitle]は、我々が他の諸侯の独立を脅かす脅威であるとして、我々の神聖ローマ帝国への加入を拒否した。[Emperor.Monarch.GetTitle]が帝国の王冠に巻き付いた弱った蛇にすぎないことは明らかであり、高貴な[Root.GetAdjective]の獅子が[Emperor.Monarch.GetHerHim]からそれを奪うことを恐れているのである。とにかく、我々は帝国に加わるためにより強力な姿勢を取る必要があるだろう…"
  incidents_bur_join_empire.4.a:0 "[Emperor.Monarch.GetSheHeCap]は名ばかりの[Emperor.Monarch.GetTitle]だ。"
- burgundy_has_resolved_imperial_issue_tt:1 "帝国への加盟に関する問題が解決されると、このミッションは完了します。"
+ burgundy_has_resolved_imperial_issue_tt:1 "帝国への加盟に関する問題が解決されると、このミッションは達成します。"
  burgundy_has_secured_succession_tt:1 "§Yブルゴーニュ継承危機§!を解決するか、あるいはそれを引き起こさずに1500年に到達します。"
  burgundy_asks_to_join_empire_tt:0 "我々を§Y神聖ローマ帝国§!に参加させるよう§Y[Emperor.Monarch.GetTitle]§!に求めるべきです。"
  burgundy_may_refuse_tt:0 "§Yブルゴーニュ§!は§Y彼らの州に中核州を持つ全てのヨーロッパ国家§!を§Y帝国諸侯§!として解放するよう求められます。\n§Yブルゴーニュ§!は拒否する可能性があります。"
@@ -3146,7 +3146,7 @@
  new_mercs_tt:0 "ヨーロッパの傭兵団は新しい戦術を採用している"
  golden_age_of_piracy_merc_tt:0 "海賊の黄金時代が有効"
  EST_KNI_CONQUEST_OF_JERUSALEM:0 "エルサレムの征服"
- templars_tt:0 "十字軍国家のミッション「エルサレム！」を完了する"
+ templars_tt:0 "十字軍国家のミッション「エルサレム！」を達成する"
  hussite_rebels_title:0 "宗教"
  hussite_rebels_name:0 "$RELIGION$の狂信者"
  hussite_rebels_desc:0 "宗教的狂信者は、異なる信仰の国々によって支配されている州で蜂起する傾向がある。彼らは自身の信仰を広め、不信心者を攻撃しようとする。"
