--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -970,7 +970,7 @@
  flavor_swe.EVTNAME3231:0 "重商主義改革"
  flavor_swe.EVTDESC3231:0 "17世紀の前半、新興大国となったスウェーデンは、軍隊を持ったのと同じくらい効果的に、交易を改革する方法を模索した。外国人の起業家（主にルイス・デ・ギアのような低地諸国からの）が商業を盛り上げ、スウェーデンの商人にとって優れた手本を提供した。スウェーデンは信頼できるオランダ人から植民地化によって利益を得ることを勧められたが、それは、積極的な大陸政策を追求する代わりにスウェーデンが選択するには気乗りのしないものだった。スウェーデンの交易は、金に欠乏した政府の重商主義的な干渉のために、決して軌道に乗ったとは言えなかった。"
  flavor_swe.EVTOPTA3231:0 "重商主義政策"
- flavor_swe.EVTOPTB3231:0 "自由交易政策"
+ flavor_swe.EVTOPTB3231:0 "自由貿易政策"
  flavor_swe.EVTOPTC3231:0 "植民地政策"
  flavor_swe.EVTNAME3232:0 "絶対主義"
  flavor_swe.EVTDESC3232:0 "スウェーデンが多かれ少なかれフランスに強いられた1674－79年の悲惨な戦争の後、カール11世とスウェーデン政府の幅広い層は何かを変えなければならないことを認識した。王は、1680年と1682年の2度の議会で、驚くほどたやすく、議会や王立評議会に耳を傾ける義務を負うことなく、国の唯一の支配権を引き継いだ。こうして、スウェーデンのカール朝絶対主義の時代が始まり、彼の神にのみ責任がある謙虚さと質素な習慣のために、王は「グレイコート」と呼ばれた。"
@@ -1682,25 +1682,25 @@
  flavor_fra.EVTNAME3120:0 "リシュリュー"
  flavor_fra.EVTDESC3120:0 "リシュリュー枢機卿、アルマン・ジャン・デュ・プレシーは、1624年にルイ13世の首席国務卿に就任した時​​点で39歳であった。彼の国内政策における主な成功は、上層階級とプロテスタントの政治的特権との戦いであった。彼はまた、海外交易、植民地の拡大、恒久的な王立海軍の設立を支援した。その最も顕著な成果は、彼が三十年戦争の間に果たした外交駆け引きであり、1630年にフランスの資金によりスウェーデンの介入を進め、最終的には1635年に戦争に加わった。彼の目的は、ハプスブルク家の縮小と敵国の包囲からのフランスの解放であった。彼は現実政治の概念の発明者と考えられている。"
  flavor_fra.EVTOPTA3120:0 "優秀な大臣だ！"
- flavor_fra.EVTNAME3122:0 "フランスのフロンドの乱"
- flavor_fra.EVTDESC3122:0 "フロンドの乱（1648～1653）は、主に王家の絶対主義に対するフランス貴族たちの最後の反乱であった。それは5歳のルイ14世の総理大臣を務めたマザラン枢機卿の国内政策に対して、パリ高等法院の反乱（当時、王の勅令を超えるフランス最高の司法機関）に始まり、それに続いて、上層階級（貴族のフロンド）の反乱が起こったが、権謀術数的な外交と、裏切り、そして敗北とが組み合わさって、反乱は最終的に鎮圧された。議会は封じられ（1789年まで再開することはなかった）、上層貴族たちは政治権力を奪われ、1661年以降の、太陽王ルイ14世の下での、完全な絶対王権の出現を準備することとなった。"
- flavor_fra.EVTOPTA3122:0 "高等法院や貴族たちを粉砕する。"
+ flavor_fra.EVTNAME3122:0 "フロンドの乱"
+ flavor_fra.EVTDESC3122:0 "フロンドの乱（1648～1653）は、主に王室絶対主義に対するフランス貴族の最後の反乱であった。5歳のルイ14世の実質的な宰相を務めたマザラン枢機卿の国内政策に対するパリ高等法院（当時は勅令を管轄するフランス最高の司法機関）の反乱に端を発した。この反乱は上流貴族の反乱（フロンド・デ・プランス）に続いたが、マキャヴェリズム的な外交と、裏切り、そして運命的逆転とが組み合わさって、最終的に鎮圧された。議会は封じられ（1789年の再開までは）、上流貴族たちは政治権力を奪われ、1661年以降の、太陽王ルイ14世の下での完全な絶対王権の出現を準備することとなった。"
+ flavor_fra.EVTOPTA3122:0 "高等法院および貴族どもを粉砕する。"
  flavor_fra.EVTOPTB3122:0 "彼らをなだめる。"
  flavor_fra.EVTNAME3123:0 "アカデミー・フランセーズ"
- flavor_fra.EVTDESC3123:0 "文学の自由な後援者であったリシュリュー枢機卿は、フランス語と文学の追求を促進するために1636年にアカデミー・フランセーズを創設した。アカデミーの科学的な部門は、名声において文学的な部分と一度も同等の力を持つことはなかったが、18世紀には数多くの重要な科学的発見がなされた。たとえば、1735年と1743年のフランスの遠征により、地球の扁球な形状が確立された。"
+ flavor_fra.EVTDESC3123:0 "文学の自由な後援者であったリシュリュー枢機卿は、フランスの言語および文学の振興を目的として1636年にアカデミー・フランセーズを創設した。アカデミーの科学部門は、文学部門に匹敵するほどの名声を得ることはなかったが、18世紀には重要な科学的発見をいくつも行った。例えば、1735年と1743年に行われたフランスの探検隊は、地球の扁球形を立証した。"
  flavor_fra.EVTOPTA3123:0 "うむ、我々には必要だ。"
  flavor_fra.EVTOPTB3123:0 "いや、それはあまりに高価だ。"
  flavor_fra.EVTNAME3124:0 "コルベール"
- flavor_fra.EVTDESC3124:0 "1661年に財務卿に任命されたジャン＝バティスト・コルベール（1619年生まれ）は、現代において最初に国家経済を発展させた。彼の国家主導の経済には税収の向上、予算の統計的計画、定期的な簿記が含まれていた。重商主義（またはコルベール主義）を提唱し、貴重な完成品（贅沢品など）の輸出と高い輸入関税を通じてフランスの交易収入の好転を目指した。彼はより効率的な国内交易（道路、運河、地方の関税の抑制）を奨励し、国家独占の確立、製造業者の助成、航行および交易連合の促進、農業価格の固定、婚姻の奨励、移住の禁止（カナダを除く）を行った。彼の政策を支えるために、彼はまた王立海軍の規模を大幅に拡大した。重商主義は商業と工芸を促進し、それによって繁栄を高めたが、農民が生産を増やすよう刺激されることはなかった。彼が1683年に死亡すると、彼の息子のセニュレー侯コルベールは1690年まで彼の仕事を追求した。"
- flavor_fra.EVTOPTA3124:0 "海軍を作り、インフラを近代化する。"
- flavor_fra.EVTOPTB3124:0 "経済支配に専念する。"
- flavor_fra.EVTOPTC3124:0 "海軍の覇権に専念する。"
+ flavor_fra.EVTDESC3124:0 "1661年に財務総監に任命されたジャン＝バティスト・コルベール（1619年生まれ）は、近代最初の国家経済を発展させた。彼の国家主導の経済には徴税の強化、統計的な予算計画、規則正しい帳簿作成が含まれていた。重商主義（またはコルベール主義）を提唱し、貴重な完成品（贅沢品など）の輸出と高い輸入関税によるフランスの貿易収支の好転を目指した。彼はより効率的な国内交易（道路、運河、地方の関税抑制）を奨励し、国家独占の確立、製造業者への助成、航行および交易連合の促進、農産物価格の固定、婚姻の奨励、移住の禁止（カナダを除く）を行った。また、その政策を支えるために、王立海軍の規模を大幅に拡大した。重商主義が商業や工芸を振興し、繁栄をもたらした一方で、農民は生産量を増やすような刺激を受けなかった。1683年に死去すると、息子のセニュレー侯コルベールが1690年までその任務を遂行した。"
+ flavor_fra.EVTOPTA3124:0 "海軍を作り、インフラを近代化する"
+ flavor_fra.EVTOPTB3124:0 "経済支配に専念する"
+ flavor_fra.EVTOPTC3124:0 "海軍の覇権に専念する"
  flavor_fra.EVTNAME3125:0 "ヴェルサイユ宮殿の発注"
- flavor_fra.EVTDESC3125:0 "フランスがバロック時代に及ぼした主な影響の一つが、贅沢な宮廷文化であった。1669年、ルイ14世（1638～1715）はヴェルサイユ宮殿の古い狩猟用のロッジを前例のない壮大な宮殿に改装することにした。それは1682年に完成し、1683年に宮廷が移転した。豪華な内装、鏡とシャンデリア、宮廷儀式の適切な華やかさを兼ね備えたヴェルサイユに並ぶ、王にふさわしい威厳ある宮廷はヨーロッパにはなかったし、公然とあるいは秘密裏にも、この模範となる王にふさわしい威厳ある宮廷と並ぶことを熱望しない者も、ヨーロッパにはいなかった。"
- flavor_fra.EVTOPTA3125:0 "我々は栄光のためそれが必要だ。"
- flavor_fra.EVTOPTB3125:0 "このような事業は我々の利益にはならない。"
+ flavor_fra.EVTDESC3125:0 "フランスがバロック時代に及ぼした主な影響の一つが、贅沢な宮廷文化であった。1669年、ルイ14世（1638～1715）はヴェルサイユにあった古い狩猟用ロッジを前例のない壮大な宮殿に改装することにした。宮殿は1682年に完成し、1683年に宮廷が移転した。金箔の内装、鏡やシャンデリアの豪華さ、それに見合った宮廷儀礼の華やかさを兼ね備えたヴェルサイユに並ぶ、王にふさわしい威厳ある宮廷はヨーロッパにはなかったし、公然とあるいは秘密裏にも、このモデルに憧れない王侯貴族などヨーロッパにはいなかった。"
+ flavor_fra.EVTOPTA3125:0 "栄光のために必要だ"
+ flavor_fra.EVTOPTB3125:0 "こんな事業は利益にならない"
  flavor_fra.EVTNAME3126:0 "ヴェルサイユ宮殿はこの世のものとは思えない荘厳さを持ってそびえ立つ"
- flavor_fra.EVTDESC3126:0 "フランスの古典様式を代表するこの巨大な建造物は、ルイ・ル・ヴォー、J.H.マンサール、シャルル・ル・ブランの作品だった。アンドレ・ル・ノートルは、噴水、貯水池、アントワーヌ・コワズヴォクスといった芸術家の彫刻で飾られた公園と庭園を配置した。マルリー＝ル＝ロワには噴水用の水を供給するための巨大な機械が建設された。公園には2つの小さい宮殿、大トリアノン宮殿と小トリアノン宮殿、多くの神殿、岩屋、その他の装飾的な建物がある。フランス革命の始まりの場所となったヴェルサイユ宮殿は再び王家の住処になることは決して無かった。"
+ flavor_fra.EVTDESC3126:0 "フランスの古典様式を代表するこの巨大な建造物は、ルイ・ル・ヴォー、J・H・マンサール、シャルル・ル・ブランらが手掛けた。アンドレ・ル・ノートルによって整備された公園や庭園には、噴水、貯水池、アントワーヌ・コワズヴォクスといった芸術家の彫刻で飾られた。マルリー＝ル＝ロワには噴水用の水を供給するための巨大な機械が建設された。公園には2つの小さい宮殿（大トリアノン宮殿と小トリアノン宮殿）、多くの神殿、岩屋、その他の装飾的な建物がある。フランス革命の始まりの舞台となったヴェルサイユ宮殿が、再び王家の居城となることはなかった。"
  flavor_fra.EVTOPTA3126:0 "太陽王のための太陽の宮殿だ！"
  flavor_fra.EVTNAME3127:0 "統合法廷"
  flavor_fra.EVTDESC3127:0 "ルイ14世は、ヨーロッパの覇権と北部と東部（ライン川）のフランス国境の周囲を念頭に置き、帝国の領土への請求権を進める法廷を設立した。これらの拡大主義政策は、フランスの無力な近隣諸国によって最初に黙認された。1681年、アルザスのストラスブール自由都市の併合およびルクセンブルクの1684年の占領により、それは頂点に達した。再統合は、当時主にトルコの脅威（1683年のウィーン包囲）に没頭していた帝国によって、1684年のレーゲンスブルクの和約により承認され、これはアウクスブルクの反フランス同盟（1686年）の結成へとつながった。"
@@ -1929,7 +1929,7 @@
  flavor_tur.EVTOPTA102:0 "報酬と高い賃金を与える。"
  flavor_tur.EVTOPTB102:0 "こうした恐喝を拒否する。"
  flavor_tur.EVTNAME105:1 "民営化"
- flavor_tur.EVTDESC105:1 "イェニチェリは早期から交易活動と土地保有に活発になっていたが、地中海経済の急激なインフレの影響でそれはより広範になった。イェニチェリは減少する報酬により自身を養えないため、軍事的な訓練を減らし、生計を立てるために交易を手がけていた。"
+ flavor_tur.EVTDESC105:1 "イェニチェリは早期から交易活動と土地保有に熱心になっていたが、地中海経済の急激なインフレの影響でそれはより広く行われるようになった。イェニチェリは減少する報酬により自身を養えないため、軍事的な訓練を減らし、生計を立てるために交易を手がけるようになっていた。"
  flavor_tur.EVTOPTA105:1 "誰もが生計を立てる必要がある。"
  flavor_tur.EVTOPTB105:1 "代わりに訓練と報酬を増やそう。"
  flavor_tur.106.t:0 "イェニチェリ部隊の解散"
