--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -2271,7 +2271,7 @@
  EVTNAME6150:0 "交易政策の成功"
  EVTDESC6150:0 "我々の国家の交易政策は、今のところ非常に成功している。これは我々の商人に真の後押しを与えている。"
  EVTOPTA6150:0 "これは良い知らせであると確信している。"
- EVTNAME6151:0 "交易政策は失敗だ"
+ EVTNAME6151:0 "交易政策の失敗"
  EVTDESC6151:0 "我々の国家の交易政策は現時点では実際には提供されていない。我々の商人は同様にうまくいっていない。"
  EVTOPTA6151:0 "商人は苦労しているようだ"
  EVTOPTB6151:0 "我々はもう少し車輪を円滑に回していくべきだ…"
