--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -6234,7 +6234,7 @@
  RELIGIOUSCENTERREMOVE_BTN2:0 "OK"
  RELIGIOUSCENTERREMOVE_BTN3:0 "移動"
  EXPLORATION_FINISHED_TITLE:0 "$MISSION$の探索完了"
- EXPLORATION_FINISHED_SETUP:0 "海軍の探索ミッションが完了したとき"
+ EXPLORATION_FINISHED_SETUP:0 "海軍の探検任務が完了したとき"
  EXPLORATION_FINISHED_HEADER:0 "探検家からの報告"
  EXPLORATION_FINISHED_1:0 "探索が完了しました。"
  EXPLORATION_FINISHED_2:0 "$NAME$は彼の使命である"
@@ -6245,7 +6245,7 @@
  EXPLORATION_FINISHED_BTN1:0 "OK"
  EXPLORATION_FINISHED_BTN2:0 "OK"
  EXPLORATION_FINISHED_BTN3:0 "移動"
- EXPLORATION_FINISHED_MAP:0 "海軍の探索ミッションが終了しました。"
+ EXPLORATION_FINISHED_MAP:0 "海軍の探検任務が終了！"
  SUBJECTINTERACT_INSTANT_TITLE:0 "宗主国の決定"
  SUBJECTINTERACT_INSTANT_SETUP:0 "従属国の君主が直接交流を行ったとき"
  SUBJECTINTERACT_INSTANT_HEADER:0 "$OVERLORD$からの使者"
@@ -6781,10 +6781,10 @@
  NEW_ARMY_PROFESSIONALISM_ABILITY_BTN2:0 "OK"
  NEW_ARMY_PROFESSIONALISM_ABILITY_BTN3:0 "移動"
  NAME_LEADER_DESCRIPTION:0 "$PRONOUN$の名は"
- MISSION_COMPLETED_TITLE:0 "完了したミッション"
- MISSION_COMPLETED_SETUP:0 "我が国がミッションを完了したとき"
+ MISSION_COMPLETED_TITLE:0 "ミッション達成"
+ MISSION_COMPLETED_SETUP:0 "我が国がミッションを達成したとき"
  MISSION_COMPLETED_HEADER:0 "$MESSENGER$"
- MISSION_COMPLETED_1:0 "ミッションを完了しました"
+ MISSION_COMPLETED_1:0 "ミッションを達成しました"
  MISSION_COMPLETED_2:0 "§Y$MISSION_TITLE$§!が達成され、以下の効果を得ます："
  MISSION_COMPLETED_3:0 "$MISSION_EFFECT$"
  MISSION_COMPLETED_BTN1:0 "OK"
