--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -7065,10 +7065,10 @@
  rightful_conquest_desc:0 "高貴な王族の権利により、我々の領土の周縁部は、我らが輝かしき一族に属している。我が領地の支配者である我々の生得的権利を否定するものはいない！"
  aristocratic_rule_act:0 "貴族支配"
  plutocratic_rule_act:0 "富豪支配"
- theocratic_rule_act:0 "Theocratic Rule Act"
+ theocratic_rule_act:0 "神権的統治法"
  innovative_payment_techniques_act:0 "革新的な支払手法"
- head_of_state_act:0 "Toilet Paper Act"
- zealous_court_act:0 "Zealous Court Act"
+ head_of_state_act:0 "トイレットペーパー法"
+ zealous_court_act:0 "熱烈宮廷法"
  religious_nepotism_act:0 "宗教的縁故主義"
  financial_miracle_act:0 "Financial Miracle Act"
  subject_obligations_act:0 "Subject Obligations Act"
@@ -7101,7 +7101,7 @@
  handpicked_recruits_act:0 "Handpicked Recruits Act"
  mass_conscription_act:0 "大量徴兵法"
  glorious_disengagement_act:0 "名誉ある撤退に関する法律"
- tactical_movement_act:0 "Mercenary Tactical Movement Act"
+ tactical_movement_act:0 "傭兵戦術移動法"
  universal_serfdom_act:0 "普遍的農奴法"
  gentle_conquest_act:0 "Gentle Conquest Act"
  sharp_wits_act:0 "Sharp Wits Act"
@@ -7109,7 +7109,7 @@
  special_forces_act:0 "特殊部隊法"
  plentiful_materials_act:0 "Plentiful Materials Act"
  naval_competence_act:0 "Naval Competence Act"
- mercenary_tactical_movement_act:0 "Mercenary Tactical Deployment Act"
+ mercenary_tactical_movement_act:0 "傭兵戦術配置法"
  dutiful_mercenaries_act:0 "Dutiful Mercenaries Act"
  hired_expeditions_act:0 "Hired Expeditions Act"
  naval_armament_act:0 "Naval Armament Act"
@@ -7233,7 +7233,7 @@
  no_road_maintenance_modifier:0 "Abysmal Roads"
  shared_prosperity_modifier:0 "Shared Prosperity"
  embarassing_display_modifier:0 "Embarassing Display"
- great_reputation_modifier:0 "Great Reputation"
+ great_reputation_modifier:0 "偉大な評価"
  shift_on_military_affairs_modifier:0 "Shift on Military Affairs"
  usual_conduct_tt:0 "The court of [Root.Monarch.GetName] is used to displays of whimsicality and will therefore just laugh it off"
  mercenary_leadership:0 "Mercenary Leadership"
