--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -711,9 +711,9 @@
  DLC_dlc119_TOOLTIP_INSTANT:0 "Domination"
  DLC_dlc119_TOOLTIP_DELAYED:0 "- 新しいミッションツリーと仕組み（オスマン、中国、日本、ロシア、スペイン、フランス、グレートブリテン）、そしてミッションの変更とフレーバーの拡張（プロイセン、ポルトガル、朝鮮）\n- 多数の国家と文化グループで60以上のユニークな政府改革が利用可能\n- 60以上の新しい階級特権、すべての階級に特権を設定\n- 新しい陸上（銃士、侍、テルシオ）および海上（キャラベル、ガレオン、ガレアス、軍艦、VOCインディアマン、亀甲船）特別ユニット\n- 新しいユニットモデル（フランス、華南、アイヌ、フィリピン）\n- 9つの新しい音楽（トルコ、フランス、中国）"
  LANDING_dlc119_TEXT:0 "主な要素：\n- 新しいミッションツリーと仕組み（オスマン、中国、日本、ロシア、スペイン、フランス、グレートブリテン）、そしてミッションの変更とフレーバーの拡張（プロイセン、ポルトガル、朝鮮）\n- 多数の国家と文化グループで60以上のユニークな政府改革が利用可能\n- 60以上の新しい階級特権、すべての階級に特権を設定\n- 新しい陸上（銃士、侍、テルシオ）および海上（キャラベル、ガレオン、ガレアス、軍艦、VOCインディアマン、亀甲船）特別ユニット\n- 新しいユニットモデル（フランス、華南、アイヌ、フィリピン）\n- 9つの新しい音楽（トルコ、フランス、中国）"
- LANDING_dlc119_FLAVOR_TEXT:0 "The story of the Early Modern World is largely the story of imperial growth and colliding ambitions. England, France and Spain battle for power in a New World to fuel their hegemony in the Old World. The established Ottomans are confronted by a new rising power in Russia. In Asia, the old Chinese and Japanese empires fight centuries of inertia in search of centralized authority.\n\nEUIV: Domination challenges you to rediscover the histories of these great powers through its new game features and updated historical detail."
+ LANDING_dlc119_FLAVOR_TEXT:0 "近世初期の物語は、その大部分が帝国の成長と野心の衝突に彩られています。イングランド、フランス、スペインは、旧世界での覇権を維持するために、新世界での勢力争いを繰り広げました。オスマン帝国は、ロシアという新たな新興勢力と対立します。アジアでは、中国と日本の旧帝国が中央集権を求めて何世紀にもわたる惰性的な戦いに挑みます。\n\nEUIV: Dominationは、新しいゲーム機能と最新の歴史的緻密さによって、これらの大国の歴史を再発見することに挑戦します。"
  dlc119_reason_new_content:0 "§YDomination Expansion§!は、世界の列強国にユニークなシステムと機能を追加します。"
- dlc119_reason_new_content_reason:0 "\nWe're recommending this expansion as you have picked a country which is aiming to be one of the Great Powers of the world, getting new mechanics, mission trees, government reforms, estate privileges and/or special units."
+ dlc119_reason_new_content_reason:0 "\n新しい仕組み・ミッションツリー・政府改革・階級特権・特殊ユニットが得られる世界の列強になれる国を選んでいるため、このDLCを推奨します。"
  dlc119_reason_new_units:0 "§YDomination Expansion§!は、フランスや中国地域の国々やアイヌやフィリピン文化圏に新しいユニットモデルを追加します。"
  dlc119_reason_new_units_reason:0 "\nフランスと中国地域の国々や、アイヌとフィリピンの文化圏に新しいユニットモデルが追加されるため、このDLCを推奨します。"
  dlc119_reason_new_music:0 "§YDomination Expansion§!は新しい楽曲を追加します。"
