--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -586,7 +586,7 @@
  well_connected_personality:0 "豊富な縁故"
  strict_personality:0 "厳格"
  inspiring_leader_personality:0 "鼓舞する指導者"
- martial_educator_personality:0 "戦争教育者"
+ martial_educator_personality:0 "好戦的教育者"
  navigator_personality:0 "探検家"
  babbling_buffoon_personality:0 "お喋りな道化"
  conqueror_personality:0 "征服者"
@@ -599,7 +599,7 @@
  naive_personality:0 "熱意あふれる世間知らず"
  craven_personality:0 "臆病"
  loose_lips_personality:0 "口軽"
- obsessive_perfectionist_personality:0 "強迫的完璧主義"
+ obsessive_perfectionist_personality:0 "強迫的完璧主義者"
  malevolent_personality:0 "邪悪"
  desc_conqueror_personality:0 "この支配者は征服者である。我々はこの体制の下では、より効率的に我々の国に新しい土地を組み込むことができるだろう。"
  desc_tolerant_personality:0 "この支配者は寛容である。宗教的少数派は我々の政権下では繁栄するだろう。"
@@ -621,7 +621,7 @@
  desc_midas_touched_personality:0 "この支配者はミダスの手である。すべての事業から収益を生み出す才能は、国の支配者にとって大きな資産である。我々の国庫は、我々の支配者がいる限り、決して金が尽きることはない。"
  desc_incorruptible_personality:0 "この支配者は清廉潔白である。近代的な国家を構築することは、多くの点で、汚職との絶え間ない戦いである。国家の役人は常に賄賂を受ける誘惑を受け、あなたの友人や親戚の世話をしたいのは自然な人間としての本能である。すべてのそのような概念をしっかりと拒絶し、それを軽蔑して戦うことにより、我々の支配者は、国家全体が従う模範を示す。"
  desc_architectural_visionary_personality:0 "この支配者は先見的建築家である。インフラを改善することは、我々の時代のどの国家にとっても必要不可欠であり、この支配者はそれを行うことができる者である。壮大な構想とコストを維持するための大きな理解と才能が相まって、この支配者は我々にとって大きな資産となる。"
- desc_scholar_personality:0 "この支配者は学者です。世界と人と自然の支配的な原則を学びたいという野望は、我々の支配者が可能な限り効率的に新しい技術を理解し、実装することを可能にする。"
+ desc_scholar_personality:0 "この支配者は学者である。世界と人と自然の支配的な原則を学びたいという野望は、我々の支配者が可能な限り効率的に新しい技術を理解し、実装することを可能にする。"
  desc_entrepreneur_personality:0 "この支配者は事業家である。いかなる障害や機会にも新しい事業の可能性を見出すことで、我々の支配者は経済を強化するためのますます多くの事業に貢献する。"
  desc_industrious_personality:0 "この支配者は勤勉である。休息することに決して満足せず、また、長い勤務を経て、我々の支配者は、国家の管理下にあるすべての資源の生産量を最大限にするため、領土内のすべての州の詳細を常に管理している。"
  desc_expansionist_personality:0 "この支配者は拡張主義者である。我々の支配者は、新しい土地への主張および定住に個人的に投資し、植民地拡大が国家の最優先事項であることを保証するために身を捧げている。"
@@ -632,7 +632,7 @@
  desc_fierce_negotiator_personality:0 "この支配者は熾烈な交渉人である。我々は、傭兵隊長が、他の方法で要求してくるよりも少ない報酬で、我々の目的のために戦うよう容易に説得することができるだろう。"
  desc_strict_personality:0 "この支配者は厳格である。軍隊の行動に大きな関心を持っているため、我々の支配者は、我々の階級の上から下まで、すべての人に厳しい規律を植え付けることができる。"
  desc_inspiring_leader_personality:0 "我々の支配者は鼓舞する指導者である。偉大な個人的な指導力は、最も臆病な人でさえ自分の勇気を見つけることへと繋がる。"
- desc_martial_educator_personality:0 "この支配者は戦争教育者である。現在の連隊の下では、士官部隊の教育と訓練が最優先事項の一つである。"
+ desc_martial_educator_personality:0 "この支配者は好戦的教育者である。現在の連隊の下では、将校団の教育・養成が最優先事項の一つである。"
  desc_navigator_personality:0 "この支配者は探検家である。士官のための履修課程から良い海図の調達、船積みに関する規則や法律に至るまで、あらゆることに個人的に関与しているため、我々の船は隣人のように頻繁に失われることはないことが保証される。"
  desc_babbling_buffoon_personality:0 "この支配者はお喋りな道化とみなされている。我々の支配者が、個人的には近隣諸国との外交に携わっていることを意味しているが、これは交渉の才能とは結びついていない。誰もが我々が望む点を見てより困難な時代を過ごす可能性があり、我々の交渉の多くは、我々の支配者の不適格によって妨げられている。"
  desc_embezzler_personality:0 "この支配者は横領者である。我々の支配者を動かしているものの一つは、個人の収入を増やすために国家収入を利用する意欲と才能である。"
@@ -644,52 +644,52 @@
  desc_naive_personality:0 "この支配者は熱意あふれる世間知らずである。その浅はかで猪突猛進とも言える性格により、隣人達に罪や侮辱を許されるには通常よりも時間がかかる。"
  desc_craven_personality:0 "この支配者は臆病である。物理的な戦闘を必死に恐れている我々の支配者は、戦場からできるだけ遠くにとどまっている。我々の軍隊は、彼らが自分たちの上にいることを認識することはできない。"
  desc_loose_lips_personality:0 "多くの場合、情報の侵害や漏洩の原因であり、この支配者は一般的に人を信頼しすぎて、簡単に騙される。残念ながら、これの大意は、我々の支配者が勢力拡大への努力にとって良いものよりも害を及ぼすことである。"
- desc_obsessive_perfectionist_personality:0 "この支配者は強迫的完璧主義である。細部やささいな点への関心は、必ずしもそのようなもののための同等の才能と結びついているわけではない。我々の支配者は、我々の国内インフラを開発することに関して、より良いものよりも多くの害を及ぼす。"
+ desc_obsessive_perfectionist_personality:0 "この支配者は強迫的完璧主義者である。細部やささいな点への関心は、必ずしもそのようなもののための同等の才能と結びついているわけではない。我々の支配者は、我々の国内インフラを開発することに関して、より良いものよりも多くの害を及ぼす。"
  desc_malevolent_personality:0 "この支配者は邪悪と考えられている。あなたの支配者の行動は、しばしば悪意や敵意によって動機づけられているように見える。その結果、我々の支配下にある従属国は、すぐに怒り、我々が取る行動を恐れている。"
  glory_seeker_personality:0 "栄光の探求者"
- desc_glory_seeker_personality:0 "この将軍は栄光の探求者である。この将軍によって導かれた軍隊は、彼らが最も目に見える差をつける場所に常に配備されているため、そうでない場合よりも多くの威信と陸軍の伝統を獲得するだろう。"
+ desc_glory_seeker_personality:0 "この将軍は栄光の探求者である。この将軍が率いる部隊は、常に最も目に見える変化をもたらす場所に配備されるため、他の部隊よりも多くの名声と陸軍伝統を得ることができる。"
  born_to_the_saddle_personality:0 "鞍生まれ"
- desc_born_to_the_saddle_personality:0 "この将軍は馬の鞍から産まれた。この指導者が率いる騎兵は側面攻撃の利点をより有効に活用できるだろう。"
- defensive_planner_personality:0 "防衛計画者"
- desc_defensive_planner_personality:0 "この将軍は防衛計画者である。この指導者に率いられた軍は攻撃に対しより弾力的に対応できるだろう。"
- battlefield_medic_personality:0 "戦場の衛生兵"
- desc_battlefield_medic_personality:0 "この将軍は戦場の衛生兵として知られている。この指揮官の下では通常の兵士以上の数の兵士が、戦闘後に回復しユニットを強化することができる。"
+ desc_born_to_the_saddle_personality:0 "この将軍は馬の鞍から産まれた。この指揮官が率いる騎兵は側面攻撃の利点をより有効に活用できる。"
+ defensive_planner_personality:0 "防衛計画家"
+ desc_defensive_planner_personality:0 "この将軍は防衛計画家である。この指揮官が率いる部隊は、衝撃に対しより弾力的に対応できる。"
+ battlefield_medic_personality:0 "衛生兵"
+ desc_battlefield_medic_personality:0 "この将軍は戦場の衛生兵として知られている。この指揮官の下にいる兵士は、他より多く戦闘後に回復することができ、部隊を強化し、力を取り戻すことができる。"
  ruthless_personality:0 "冷酷"
- desc_ruthless_personality:0 "この将軍は冷酷である。この指導者の指揮下の部隊は、大規模な射撃による損害を食らわせるだろう。"
- inspirational_leader_general_personality:0 "鼓舞する指導者"
- desc_inspirational_leader_general_personality:0 "この将軍は、鼓舞する指導者である。この指導者の指揮下の部隊は、敗北に直面してもより速く士気を回復する。"
+ desc_ruthless_personality:0 "この将軍は冷酷である。この者の指揮下にある部隊は、大規模な射撃による損害を食らわせる。"
+ inspirational_leader_general_personality:0 "鼓舞する指揮官"
+ desc_inspirational_leader_general_personality:0 "この将軍は、鼓舞する指揮官である。この者が指揮する部隊は、敗北に直面してもよりいち早く士気を回復するだろう。"
  master_of_arms_personality:0 "武芸の達人"
- desc_master_of_arms_personality:0 "この将軍は武芸の達人である。この指導者の指揮下の歩兵はより効率的に、より多くの打撃を与えることができるだろう。"
+ desc_master_of_arms_personality:0 "この将軍は武芸の達人である。この者が指揮する歩兵はより効率的に、より多くの打撃を与える。"
  goal_oriented_personality:0 "目標志向"
- desc_goal_oriented_personality:0 "この将軍は目標志向である。この指導者の指揮下の軍隊は、より速く目標に向かって進軍する。"
+ desc_goal_oriented_personality:0 "この将軍は目標志向である。この者が指揮する部隊は、より迅速に目標に向かって進軍する。"
  hardy_warrior_personality:0 "頑強な戦士"
- desc_hardy_warrior_personality:0 "この将軍は、頑強な戦士として知られている。この指導者の指揮下の軍隊は、厳しい状況により強くて、消耗をより少なく被る。"
+ desc_hardy_warrior_personality:0 "この将軍は、頑強な戦士として知られている。この者が指揮する部隊は、過酷な環境にも強く、消耗も少ない。"
  siege_specialist_personality:0 "包囲専門家"
- desc_siege_specialist_personality:0 "この将軍は、包囲戦の専門家である。この指導者によって指揮された包囲は、より効率的な方法で実施され、より速く落城する。"
+ desc_siege_specialist_personality:0 "この将軍は、包囲戦の専門家である。この者が指揮する包囲は、より効率的な方法で実施され、より速く落城する。"
  cannoneer_personality:0 "砲手"
- desc_cannoneer_personality:0 "この将軍は、砲手である。火薬と大砲で偉大なる魔力で知られているこの指導者によって指揮される砲撃は、より効率的である。"
- extortioner_personality:0 "略奪者"
- desc_extortioner_personality:0 "この提督は略奪者である。力の優位性を最大限に活用する方法を知ることは、指導者が少ないコストでより多くを行うことを可能にし、略奪者の指揮下の船は、競合する船長達によるリードよりも大きな交易力を得られるだろう。"
+ desc_cannoneer_personality:0 "この将軍は、砲手である。火薬と大砲の魅力に取りつかれたこの者が指揮する砲兵は、より効率的なものになる。"
+ extortioner_personality:0 "強奪者"
+ desc_extortioner_personality:0 "この提督は強奪者である。力の優位性を最大限に活用する方法を知ることで、指揮官は少ない力でより多くのことを行うことができ、強奪者が指揮する船は、競合する船長が指揮する船よりも大きな交易力を発揮することができる。"
  ruthless_blockader_personality:0 "無慈悲な封鎖者"
- desc_ruthless_blockader_personality:0 "この提督は無慈悲な封鎖者である。この指導者の指揮下の船は、はるかに効率的に封鎖を維持できるだろう。"
+ desc_ruthless_blockader_personality:0 "この提督は無慈悲な封鎖者である。この者が指揮する船は、はるかに効率的に封鎖を維持できる。"
  buccaneer_personality:0 "カリブ海賊"
- desc_buccaneer_personality:0 "この提督はカリブ海賊である。この指導者の指揮下の私掠船は、より効率的に任務を実行できるだろう。"
- prize_hunter_personality:0 "褒賞猟師"
- desc_prize_hunter_personality:0 "この提督は褒章猟師である。この指導者の指揮下の船長は、より多くの褒章を獲得することが奨励され、他のものより船を積極的に拿捕するだろう。"
+ desc_buccaneer_personality:0 "この提督はカリブ海賊である。この者が指揮する私掠船は、より効率的になる。"
+ prize_hunter_personality:0 "拿捕船漁り"
+ desc_prize_hunter_personality:0 "この提督は拿捕船漁りをする。この者が指揮する船長たちには、拿捕船をより多く獲得することが奨励され、他のものより船を積極的に拿捕するだろう。"
  ironside_personality:0 "剛勇"
- desc_ironside_personality:0 "この提督は剛勇である。この指導者の指揮下の船は、他の船長に指揮されたときよりも、被る損害が少なく済むようになるだろう。"
- naval_engineer_personality:0 "海上工兵"
- desc_naval_engineer_personality:0 "この提督は海上工兵である。この指導者の指揮下の船は、航行中や海戦中でもより迅速に修理することができるだろう。"
+ desc_ironside_personality:0 "この提督は剛勇である。この者が指揮する船は、他の船長に指揮されたときよりも、被る損害が少なく済む。"
+ naval_engineer_personality:0 "海軍工兵"
+ desc_naval_engineer_personality:0 "この提督は海軍工兵である。この者が指揮する船は、航行中や海戦中に受けたダメージからより早く回復することができる。"
  naval_showman_personality:0 "海上演出家"
- desc_naval_showman_personality:0 "この提督は海上演出家である。この指導者の指揮下の船は、戦闘からより多くの威信と海軍伝統を得られるだろう。"
+ desc_naval_showman_personality:0 "この提督は海上演出家である。この者が指揮する船は、戦闘からより多くの威信と海軍伝統を得られるだろう。"
  ram_raider_personality:0 "衝角襲撃者"
- desc_ram_raider_personality:0 "この提督は衝角襲撃者である。この指導者の指揮下のガレー船は、海戦において敵に対しより多くの損害を効率的に与えられるだろう。"
- naval_gunner_personality:0 "海上砲手"
- desc_naval_gunner_personality:0 "この提督は海上砲手として知られている。この指導者による絶え間ない砲術訓練によって、大型船は敵に対しより多くの損害を与えられるようになるだろう。"
- accomplished_sailor_personality:0 "練達した水兵"
- desc_accomplished_sailor_personality:0 "この提督は練達した水兵である。提督自身がもつ航行の専門知識によって指揮下の全ての船長の技術を向上させ、練達した水兵の指揮下の船はより迅速に目的地に到着できるようになるだろう。"
+ desc_ram_raider_personality:0 "この提督は衝角襲撃者である。この者が指揮するガレー船は、海戦においてより効率的により多くの損害を与える。"
+ naval_gunner_personality:0 "掌砲長"
+ desc_naval_gunner_personality:0 "この提督は掌砲長として知られている。この指揮官による絶え間ない砲術訓練によって、大型船はより多くの損害を与える。"
+ accomplished_sailor_personality:0 "練達水兵"
+ desc_accomplished_sailor_personality:0 "この提督は練達した水兵である。提督自身がもつ航行ノウハウによって指揮下の全ての船長の技能を向上させ、練達した水兵に指揮された船はより迅速に目的地に到着するだろう。"
  level_headed_personality:0 "冷静"
- desc_level_headed_personality:0 "この提督は冷静である。この指導者の指揮下の、慎重な訓練によって冷静な心を得た船員は、海戦中に受けた打撃による士気損害からより立ち直りやすくなるだろう。"
+ desc_level_headed_personality:0 "この提督は冷静である。この指揮官による慎重な訓練によって冷静な心を得た船員は、海戦中に受けた打撃による士気損害からより立ち直りやすくなる。"
  immortal_personality:0 "不死"
  desc_immortal_personality:0 "この支配者は死を欺く術を見つけていて、あるいは永遠に生き続けるのかもしれない。病を患うことも年老いることもないが、それでも肉体的暴力によって死亡する可能性はある。"
  immortal_personality_die_desc:0 "彼が不死であるという報告は、明らかに大きく誇張されていた。"
@@ -698,32 +698,32 @@
  personality_options.5051.d:0 "農民を保護するための新しい改革を導入する。"
  personality_options.6003.a:0 "小さな代表機関を設立する。"
  cuirassier_leader_personality_die_desc:1 "[GetHerHisCap]の騎兵隊が戦う様が惜しまれます。"
- cruel_tactician_personality_die_desc:0 "The day of [GetHerHis] demise will be celebrated by our enemies as a holiday."
- frontline_holder_personality_die_desc:0 "[GetHerHisCap] death will not be in vain as our troops hold the line."
+ cruel_tactician_personality_die_desc:0 "[GetHerHis]の命日は、我々の敵にとっては祝日として祝われることになるでしょう。"
+ frontline_holder_personality_die_desc:0 "[GetHerHisCap]の死は、我が軍が戦線を維持する上で、決して無駄にはならないでしょう。"
  strict_drillmaster_personality_die_desc:0 "[GetHerHis]の教えが、未来の将軍たちの偉大さを鼓舞しますように。"
- naval_strategist_personality_die_desc:0 "[GetHerHisCap] strategies on the sea saved many lives."
- inspirational_captain_personality_die_desc:0 "[GetHerHisCap] inspirational speeches will be remembered by generations of sailors."
- naval_cannoneer_personality_die_desc:0 "The sound of our cannons will never as loud as they were during [GetHerHis] leadership."
- wooden_waller_personality_die_desc:0 "[GetHerHisCap] confrontial warfare led us to victory where other ships would have sunk."
- cunning_navigator_personality_die_desc:0 "[GetHerHisCap] navigation skills saved the lifes of many sailors."
- cuirassier_leader_personality:0 "Cuirassier Leader"
- desc_cuirassier_leader_personality:0 "This General is a Cuirassier Leader. The army commanded by this leader will be able to support more cavarly than usual."
- cruel_tactician_personality:0 "Cruel Tactician"
- desc_cruel_tactician_personality:0 "This General is a Cruel Tactician. Troops commmanded by this leader will be more efficient at breaking the morale of the enemy."
- frontline_holder_personality:0 "Frontline Holder"
- desc_frontline_holder_personality:0 "This General is a Frontline Holder. Troops commmanded by this leader will be more resillient to the loss of morale."
- strict_drillmaster_personality:0 "Strict Drillmaster"
- desc_strict_drillmaster_personality:0 "This General is a Strict Drillmaster. Troops commmanded by this leader will be of greater discipline and do not lose their drill as fast."
- naval_strategist_personality:0 "Naval Strategist"
- desc_naval_strategist_personality:0 "This Admiral is an Naval Strategsist. Ships commanded by this leader are more likely to retreat from a bad battle instead of getting sunk."
- inspirational_captain_personality:0 "Inspirational Captain"
- desc_inspirational_captain_personality:0 "This Admiral is an Inspirational Captain. The sailors commanded by this leader will be quicker to regain morale in the face of defeat."
- naval_cannoneer_personality:0 "Naval Cannoneer"
- desc_naval_cannoneer_personality:0 "This Admiral is a Naval Cannoneer. The ships of this leader will bring more cannons to a fight in order to bombard the enemies."
- wooden_waller_personality:0 "Wooden Waller"
- desc_wooden_waller_personality:0 "This Admiral is a Wooden Waller. Ships commanded by this leader will be able to withstand more damages than those commanded by other captains."
- cunning_navigator_personality:0 "Cunning Navigator"
- desc_cunning_navigator_personality:0 "This Admiral is a Cunning Navigator. Ships commanded by this leader will reach their destination faster than usual."
+ naval_strategist_personality_die_desc:0 "海における[GetHerHisCap]の戦略は、多くの命を救いました。"
+ inspirational_captain_personality_die_desc:0 "[GetHerHisCap]の感動的な演説は、何世代にもわたって船乗りの記憶に残ることでしょう。"
+ naval_cannoneer_personality_die_desc:0 "私たちの砲音は、[GetHerHis]の指令の時ほどうるさくはないでしょう。"
+ wooden_waller_personality_die_desc:0 "[GetHerHisCap]の対決戦法は、他の船なら沈んでしまうような場所でも、私たちを勝利に導いてくれました。"
+ cunning_navigator_personality_die_desc:0 "[GetHerHisCap]の航海術は、多くの水兵を救いました。"
+ cuirassier_leader_personality:0 "胸甲騎兵の指揮官"
+ desc_cuirassier_leader_personality:0 "この将軍は胸甲騎兵の指揮官である。この者が指揮する軍はより効率的に、普通より多くの騎兵を支援することができる。"
+ cruel_tactician_personality:0 "残酷な戦術家"
+ desc_cruel_tactician_personality:0 "この将軍は残酷な戦術家である。この指揮官が指揮する部隊は、敵の士気をより効率的に下げる。"
+ frontline_holder_personality:0 "先駆け"
+ desc_frontline_holder_personality:0 "この将軍は先駆けである。この者が指揮する部隊は、士気の低下に対してより強い抵抗力を持つ。"
+ strict_drillmaster_personality:0 "厳格な訓練教官"
+ desc_strict_drillmaster_personality:0 "この将軍は厳格な訓練教官である。この者が指揮する部隊は、より規律正しく、訓練度を早く失うことはない。"
+ naval_strategist_personality:0 "海軍戦略家"
+ desc_naval_strategist_personality:0 "この提督は海軍戦略家である。この者が指揮する船は、撃沈されやすかろうと分の悪い戦いから撤退する可能性が高い。"
+ inspirational_captain_personality:0 "鼓舞する船長"
+ desc_inspirational_captain_personality:0 "この提督は、鼓舞する船長である。この者が指揮する水兵は、敗北に直面してもよりいち早く士気を回復するだろう。"
+ naval_cannoneer_personality:0 "海軍砲手"
+ desc_naval_cannoneer_personality:0 "この提督は海軍砲手である。この指揮官の船は、敵を砲撃するために、より多くの大砲を搭載して戦いに臨む。"
+ wooden_waller_personality:0 "「木の城壁」主義者"
+ desc_wooden_waller_personality:0 "この提督は「木の城壁」主義者である。この者が指揮する船は、他の船長の船よりも、より多くの損害に耐えることができる。"
+ cunning_navigator_personality:0 "狡猾な探検家"
+ desc_cunning_navigator_personality:0 "この提督は狡猾な探検家である。この者が指揮する船は、通常よりも早く目的地に到着する。"
  great_explorer_personality:0 "大探検家"
- great_explorer_personality_desc:0 "A legendary explorer, ready to charter unknown seas and bring prestige and splendor to our name!"
- great_explorer_personality_die_desc:0 "Alas, a great catastrophe! Magellan, our most highly esteemed and legendary navigator has embraced the afterlife. A grey and sorrowful day is upon us..."
+ great_explorer_personality_desc:0 "伝説の探検家。未知の海を航海し、我々の名に名声と輝きをもたらす準備ができているものなり！"
+ great_explorer_personality_die_desc:0 "悲しきかな、大いなる不幸よ！最も尊敬される伝説的な航海士マゼランがあの世へ旅立った。灰色で哀愁漂う日がやってくる…"
