--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -344,7 +344,7 @@
  PEACE_STEER_TRADE:0 "交易を誘導させる"
  PEACE_OTHERS_STEER_TRADE:0 "$WHOS$交易を誘導"
  STEER_TRADE_TO_DESC:0 "$FROM$の商人は$TO$に交易を誘導することを強制され、これは停戦期間中続くでしょう。"
- OTHERS_STEER_TRADE_TO_DESC:0 "$FROM$はもはや$ORG$への交易を誘導しないでしょう。それらの商人は代わりに$TO$への交易を誘導します。これは停戦期間中、有効であり続けるでしょう。"
+ OTHERS_STEER_TRADE_TO_DESC:0 "$FROM$はもはや$ORG$への交易を誘導しません。かの商人たちは代わりに$TO$への交易を誘導します。これは停戦期間中、有効であり続けるでしょう。"
  KNOWLEDGE_SHARING_INTERACT_WHAT:0 "知識共有の開始"
  KNOWLEDGE_SHARING_INTERACT_EFFECT:0 "$INSTITUTION$の採用は$SUBJECT$の首都地域において加速されるでしょう。"
  KNOWLEDGE_SHARING_INTERACT_OVERLORD_EFFECT:0 "我々は$SUBJECT$の月間収入の§R$PERCENT$%§!を支払うでしょう。"
@@ -452,7 +452,7 @@
  OWNS_ALL_ISLAND_COMPLETED:0 "全ての島の州を領有した。\n"
  MODIFIER_INNOVATIVENESS_GAIN:0 "革新性の増加"
  CHANGE_ASPECT_COST:0 "$COST|Y$の教会権力コスト"
- COMPLETE_MISSION_EFFECT:0 "報酬のないミッションの$MISSION|Y$を完了しました"
+ COMPLETE_MISSION_EFFECT:0 "報酬のないミッション$MISSION|Y$を達成"
  island_provinces_tooltip:0 "ストックホルム、パナマあるいはグーグ・イミディルに直接土地が繋がっていないすべての州を領有するか、あるいは領有する従属国（非朝貢国）を持っている。"
  CLICK_TO_CENTER_HIGHLIGHTED:0 "クリックすると画面中央に表示"
  HAVE_THE_ACTIVE_PROVINCE_MODIFIER:0 "州補正が有効"
